# tinybvh

./: CMakeLists.txt  README.md  tiny_bvh.h  tiny_bvh_fenster.cpp  tiny_bvh_minimal.cpp  tiny_bvh_renderer.cpp  tiny_bvh_renderer.vcxproj  tiny_bvh_renderer.vcxproj.filters  tiny_bvh_speedtest.cpp  tiny_bvh_test.cpp  tiny_bvh_test.sln  tiny_bvh_test.vcxproj  tiny_bvh_test.vcxproj.filters  tiny_ocl.h  traverse.cl
.github/workflows/: tinybvh_sdk_ci.yml
vcproj/: tiny_bvh_fenster.vcxproj  tiny_bvh_fenster.vcxproj.filters  tiny_bvh_minimal.vcxproj  tiny_bvh_minimal.vcxproj.filters  tiny_bvh_renderer.vcxproj  tiny_bvh_renderer.vcxproj.filters  tiny_bvh_speedtest.vcxproj  tiny_bvh_test.vcxproj  tiny_bvh_test.vcxproj.filters
